--- a/Index.html
+++ b/Index.html
@@ -129,7 +129,7 @@
 
         async function getAIResponse(userText) {
             // Replace 'YOUR_API_KEY' with your actual OpenAI API key
-            const apiKey = "YOUR_API_KEY";
+            const apiKey = "sk-svcacct-xK2jIQCh102hHyn3359nbtv1p_Kr7LaxmZZ846ZlGKwAGgMt1SwQYBfSsClV_MT3BlbkFJxozsRCxYqGABnr1xcHwTTGrrOxSuPcnFkw-Rhab2o4XiogMBuSVeDimbsxfAwA";
 
             try {
                 const response = await fetch("https://api.openai.com/v1/completions", {
