--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Assistant</title>
     <style>
-        /* CSS for the chat interface */
         body {
             display: flex;
             justify-content: center;
@@ -71,7 +70,6 @@
             flex-grow: 1;
             padding: 10px;
             border: none;
-            border-radius: 0;
             font-size: 16px;
         }
         
@@ -102,7 +100,6 @@
     </div>
 
     <script>
-        // JavaScript for chat functionality
         async function addMessage(text, className) {
             const chatBox = document.getElementById("chat-box");
             const messageElement = document.createElement("div");
@@ -118,18 +115,15 @@
             
             if (userText === "") return;
 
-            // Display the user's message
             addMessage(userText, "user-message");
             userInput.value = "";
 
-            // Call the OpenAI API to get a response
             const responseText = await getAIResponse(userText);
             addMessage(responseText, "ai-message");
         }
 
         async function getAIResponse(userText) {
-            // Replace 'YOUR_API_KEY' with your actual OpenAI API key
-            const apiKey ="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";
+            const apiKey = "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"; // Replace with your actual API key
 
             try {
                 const response = await fetch("https://api.openai.com/v1/completions", {
@@ -146,11 +140,16 @@
                     })
                 });
 
+                if (!response.ok) {
+                    console.error("Error response from API:", await response.json());
+                    return "Error: Unable to get a response from the AI.";
+                }
+
                 const data = await response.json();
                 return data.choices[0].text.trim();
             } catch (error) {
-                console.error("Error fetching AI response:", error);
-                return "Sorry, I couldn't get a response from the AI.";
+                console.error("Fetch error:", error);
+                return "Error: Something went wrong.";
             }
         }
     </script>
