--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }
 
         async function getAIResponse(userText) {
-            const apiKey = "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"; // Replace with your actual API key
+            const apiKey = "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" // Replace with your actual API key
 
             try {
                 const response = await fetch("https://api.openai.com/v1/completions", {
