--- a/index.html
+++ b/index.html
@@ -123,36 +123,35 @@
         }
 
         async function getAIResponse(userText) {
-            const apiKey = "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" // Replace with your actual API key
+    const apiKey = "YOUR_API_KEY"; // Replace with your actual API key
 
-            try {
-                const response = await fetch("https://api.openai.com/v1/completions", {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json",
-                        "Authorization": `Bearer ${apiKey}`
-                    },
-                    body: JSON.stringify({
-                        model: "text-davinci-003",
-                        prompt: userText,
-                        max_tokens: 50,
-                        temperature: 0.7
-                    })
-                });
+    try {
+        const response = await fetch("https://api.openai.com/v1/completions", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Authorization": `Bearer ${apiKey}`
+            },
+            body: JSON.stringify({
+                model: "text-davinci-003",
+                prompt: userText,
+                max_tokens: 50,
+                temperature: 0.7
+            })
+        });
 
-                if (!response.ok) {
-                    console.error("Error response from API:", await response.json());
-                    return "Error: Unable to get a response from the AI.";
-                }
-
-                const data = await response.json();
-                return data.choices[0].text.trim();
-            } catch (error) {
-                console.error("Fetch error:", error);
-                return "Error: Something went wrong.";
-            }
+        if (!response.ok) {
+            const errorData = await response.json();
+            console.error("Error response from API:", errorData);
+            return `Error: ${errorData.error.message || "Unable to get a response from the AI."}`;
         }
-    </script>
 
+        const data = await response.json();
+        return data.choices[0].text.trim();
+    } catch (error) {
+        console.error("Fetch error:", error);
+        return "Error: Something went wrong.";
+    }
+}
 </body>
-</html>
+    </html>
