--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }
 
         async function getAIResponse(userText) {
-    const apiKey = "YOUR_API_KEY"; // Replace with your actual API key
+    const apiKey = "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"; // Replace with your actual API key
 
     try {
         const response = await fetch("https://api.openai.com/v1/completions", {
