--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         "Authorization": `Bearer ${apiKey}`
                     },
                     body: JSON.stringify({
-                        model: "text-davinci-003",
+                        model: "gpt-3.5-turbo",
                         prompt: userInput,
                         max_tokens: 50,
                         temperature: 0.7
